--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:0.5'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:2.2.2'
     implementation 'com.android.support:mediarouter-v7:26.0.0-beta1'
+    implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+
 }
