--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         </activity>
         <activity android:name=".profile" />
         <activity android:name=".feed" />
+        <activity android:name=".musicPlayer" />
         <activity android:name=".help"></activity>
     </application>
 
