Created basic UI for edit profile page

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
         </activity>
         <activity android:name=".profile" />
         <activity android:name=".feed" />
-        <activity android:name=".help"></activity>
+        <activity android:name=".help" />
+        <activity android:name=".edit_profile"></activity>
     </application>
 
 </manifest>
