--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,9 +21,10 @@
         </activity>
         <activity android:name=".profile" />
         <activity android:name=".feed" />
-        <activity android:name=".edit_profile"/>
-        <activity android:name=".musicPlayer"/>
-        <activity android:name=".help"></activity>
+        <activity android:name=".edit_profile" />
+        <activity android:name=".musicPlayer" />
+        <activity android:name=".help" />
+        <activity android:name=".ListOfSongs"></activity>
     </application>
 
 </manifest>
