Thie is the create account page. Checks if passowrds are equal

--- a/app/src/main/gen/com/example/es1294/airmusic/AndroidManifest.xml
+++ b/app/src/main/gen/com/example/es1294/airmusic/AndroidManifest.xml
@@ -23,6 +23,7 @@
         <activity android:name=".feed" />
         <activity android:name=".edit_profile"/>
         <activity android:name=".musicPlayer"/>
+        <activity android:name=".Create_Account"/>
         <activity android:name=".help"></activity>
     </application>
 
