--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,8 @@ dependencies {
     implementation 'com.android.support:mediarouter-v7:26.1.0'
     implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     compile 'com.android.volley:volley:1.1.0'
-    implementation 'com.google.firebase:firebase-core:16.0.1'
+    implementation 'com.google.firebase:firebase-core:16.0.4'
+    implementation 'com.google.firebase:firebase-database:16.0.4'
 
 }
 apply plugin: 'com.google.gms.google-services'
